Refactor backend services to transition from PostgreSQL to MongoDB: Removed PostgreSQL configurations and dependencies from Docker Compose and backend files. Updated analytics repositories to utilize MongoDB for data aggregation and storage. Enhanced appointment and audit models to align with MongoDB schema. Introduced new service catalog and therapy module seeding logic in LocalBootstrap for improved data initialization. Updated seed script to reflect the removal of PostgreSQL, providing clear guidance for MongoDB usage.